[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/UI/DebugInfoPanel.gd" type="Script" id=1]

[node name="DebugInfoPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="labelFPS" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -7.0
margin_right = 58.0
margin_bottom = 7.0
text = "labelFPS"
__meta__ = {
"_edit_lock_": true
}

[node name="labelLoadingSceneTime" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -7.0
margin_right = 250.0
margin_bottom = 7.0
text = "labelLoadingSceneTime"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="labelMemory" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 300.0
margin_top = -7.0
margin_right = 450.0
margin_bottom = 7.0
text = "labelMemory"
__meta__ = {
"_edit_lock_": true
}
